[tool.poetry]
name = "wdiff"
version = "0.0.9"
description = "Analyze how difficult a Spanish word will be to spell"
authors = ["Mario E. Bermonti Pérez <mbermonti1132@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25"
docrep = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
